--- a/src/content/_data/events.yaml
+++ b/src/content/_data/events.yaml
@@ -27,8 +27,8 @@ codeathon:
   title: Code-a-thon
   description:  |-
     Do you have what it takes to survive a coding marathon? Then we have just the right thing for you...
-    Multiple-choice questions based on concepts of C and C++.
-    ...then solve some real problems using C/C++.
+    Multiple-choice questions based on concepts of C,C++and Java.
+    ...then solve some real problems using C/C++/Java.
   islive: false
   isover: false
   isnontech: false
@@ -36,12 +36,12 @@ codeathon:
   teamSize: 2
   lang: cpp
   rounds:
-    - Multiple-choice based questions based on concepts of C/C++.
+    - Multiple-choice based questions based on concepts of C/C++/Java.
     - |-
-      The qualifying teams would be given a set of problems to code in C/C++.
+      The qualifying teams would be given a set of problems to code in C/C++/Java.
   details:
     - 'Operating System: Windows'
-    - 'Platform: Dev C++'
+    - 'Platform: Dev C++/Netbeans(Java)'
 
 select-star-from-brain:
   title: SELECT * FROM BRAIN
@@ -99,10 +99,13 @@ make-app:
   teamSize: 2
   lang: cpp
   rounds:
-    - Elimination round (Multiple-choice based questions based on concepts of Java/Android).
-    - |-
-      The qualifying teams would be asked to develop an android/ios application overnight at their own places and next day have to present their project to judges for final evaluation
+    -  The teams would be asked to develop an android/ios application on spot. They have to present their project to judges for final evaluation
   details:
+    - 'Note: The teams need to bring their own system with the software installed. Internet will be provided.'
+    - 'You will get 8 hours that is from 10am-6pm.'
+    - 'Theme will be provided on spot.'
+    - 'Regristration will be done separately on day 2 of Sankalan.'
+    - 'Registration fee:Rs 50/-'
     - 'Operating System: Any Suitable System.'
     - 'Platform: Platform as per requirement'
 
