--- a/src/content/_data/events.yaml
+++ b/src/content/_data/events.yaml
@@ -165,16 +165,17 @@ chakravyuh:
     - |-
       <strong>Rules follow:</strong>
       <ol>
+        <li>Facebook login is required.</li>
         <li>First team to finish the game wins.</li>
-        <li>Number of participants in a team can maximum be 1.
-        <br>Do not ask your friends for help or help them (AKA no cheating)</li>
+        <li>Any attempt of hacking will lead to automatic disqualification.</li>
         <li>Event is open to all college/institute students.</li>
         <li>Decision of the organisers would be final and binding.</li>
         <li>Organisers have the right to disqualify any team if they are found breaking any rules.</li>
       </ol>
     - 'Venue: <a href="http://chakravyuh18.com/" target="_blank">http://chakravyuh18.com/</a>'
-    - 'Date: 2nd - 4th March 2018.'
-    - 'Start Time: 10:00 pm.'
+    - 'Date: 2nd - 5th March 2018.'
+    - 'Start Time: 2nd March at 10:00 pm.'
+    - 'End Time: 5th March at 10:00 pm.'
     - Step forward in the arena and join the battle! Contact for details.
 
 turncoat:
