--- a/src/content/_data/events.yaml
+++ b/src/content/_data/events.yaml
@@ -439,3 +439,96 @@ lan-den:
   #   - 'CS: teamSize = 4'
   #   - 'NFS Most Wanted: teamSize = 1'
   #   - 'Mini Militia: teamSize = 1'
+  details:
+    - <strong>General Rules</strong>
+    - These rules apply to everyone attending. They can be changed without notice.
+    - |-
+      <ol>
+      <li>You are responsible for your actions and equipment. We are not liable for anything that happens to you and your equipment.</li>
+      <li>Do not attempt to steal items from the event or anything else, legal consequences will be there.</li>
+      <li>Cheating is an offence. Doing so may lead to disqualification.</li>
+      <li>Do not bring any type of hacks/viruses/etc. to the event.</li>
+      <li>Listen to those in charge.</li>
+      <li>We reserve the right to remove anyone from premises for any reason we fit.</li>
+      </ol>
+    - <strong>DAY 1 </strong>
+    - 'Mini Militia'
+      - Mini Militia is a multi player army shooting game. One can combat with up to 6 players via online gaming and up to 12 players with the local Wi-Fi hotspot. You can shoot with various guns during the battle. If you are a shooting game addict then Mini militia is the best solution for you.
+      - 'Rules:'
+      - |-
+        <ol>
+        <li>It will be a team event.Each team will comprise of only 3 members and team will not change throughout the event.In absence of any participant team will have to play with remaining members only.</li>
+        <li>All participants must bring their own fully charged mobile phones.</li>
+        <li>Hacked APK&#39;s are not allowed. Any participant found with such APK&#39;s will be immediately disqualified.</li>
+        <li>Participants will install the game provided by us.</li>
+        <li> Matches will take place on one of the following four locations:</li>
+        - |-
+          <ul>
+          <li>Outpost</li>
+          <li>High Tower</li>
+          <li>Catacombs</li>
+          <li>No Escape</li>
+          </ul>
+        <li>A trial of three minutes will be provided to check the functioning of controls.</li>
+        <li>Use of shield and committing suicide and storing items is NOT allowed</li>
+        </ol>
+   - 'FIFA 17' 
+     - FIFA, also known as FIFA Football or FIFA Soccer, is a series of association footballvideo games or football simulator, released annually by Electronic Arts under the EA Sports label
+     - 'Rules:'
+     - |-
+       <ol>
+       <li>The competition will be on fifa 17. Matches will be played 1 on 1.</li>
+       <li>Controllers will be provided by us. Mishandling can lead to legal action against the participant</li>
+       <li>Any club team (except classic 11 and international teams) can be chosen</li>
+       <li>All the matches will be knock out.</li>
+       <li>3 min time will be given to choose the team, and players will play with the same for the rest of the competition.</li>
+       <li>Except 1st round away match rule will be applied.</li>
+       <li>Any discrepancy committed results player debarred for the competition.</li>
+       <li>Coordinators decision will be final, no argument will be entertained.</li>
+       <li>Rules can be changed, modified on the day of competition.</li>
+       </ol>
+   - <strong>DAY 2</strong>   
+   - 'COUNTER STRIKE 1.6'
+      - Counter-Strike is the most popular online team shooter in history, and for good reason. More than a decade on it is still the best and the most entertaining game of its type, has the best scenarios, and is the best place for gamers to really show their mouse skills.
+      - For the uninitiated, Counter-Strike is a first-person shooter where two teams must face each other to achieve a set objective. These two teams are split into terrorists and anti-terrorist strike teams, and must fight against each other to place, or deactivate, bombs or keep ,or rescue hostages, respectively.
+      - 'Rules:'
+      - |-
+        <ol>
+        <li>1st round will be knife round.</li>
+        <li>For the knife round. The winner of the knife round picks the side they want to play first (CT or T).</li>
+        <li>Matches will be played 4 on 4.</li>
+        <li>The map list for the tournament will be informed by the organizers on the day of tournament.</li>
+        <li>Automatic snipers (D3/Au-1, Krieg-550), tactical shield are strictly not allowed.</li>
+        <li> General rules settings:</li>
+        - |-
+          <ul>
+          <li>Starting Money: $800.</li>
+          <li>Spectate is OFF, fade to block is ON.</li>
+          <li>Round Time :1 minute n 45 sec</li>
+          <li>C4 Timer:35 seconds</li>
+          <li> Freeze Time:5 seconds</li>
+          <li>Buy Time:15 seconds</li>
+          <li>Friendly Fire: ON</li>
+          <li>Team collision:ON</li>
+          </ul>
+        <li>Participants can bring their own mouse, headphones,keyboard and mouse pad.nothing other than these items is allowed to plugin.</li>
+        <li>If disconnection occurs during a match then scores till the last round will continue and starting money will be decided by the organizers.</li>
+        <li>Under no circumstances silent plants are allowed; whether accidentally or intentionally.</li>
+        <li>If any of the members is absent then no replacement will be allowed and teams will have to compete with the remaining members</li>
+        </ol>
+   - 'NFS Most Wanted'
+      - Need For Speed Most Wanted is a multiplayer car racing game, where the player selects one car and races against a time limit or other racers to reach a destination. The game provides players with three game modes. The Quick Race mode allows the player to select a car and an event and immediately start racing. The available cars and events are unlocked as the player progresses through the storyline in the Career mode.
+      - 'Rules:'
+      - |-
+        <ol>
+        <li>Game Type will be Circuit or Sprint.</li>
+        <li>Players getting the 1st position will qualify for the next round.</li>
+        <li>The tournament will be knock out.</li>
+        <li>There will not be any match played for the third spot.</li>
+        <li>Each player will be given the same car.</li>
+        <li>Players will be provided with the standard keyboard and mouse. Controllers or Steering Wheel are NOT allowed.</li>
+        <ol>
+   - 'Registration time:9:30 am to 11 am'
+   - 'For further information contact:'
+   - 'Mohit chauhan-8527234624'
+   - 'Rishabh joshi-9560201250'
