--- a/src/content/_data/events.yaml
+++ b/src/content/_data/events.yaml
@@ -252,7 +252,7 @@ junkyard-wars:
   image: https://4.bp.blogspot.com/-PLK_JfQhM6c/Woma1qA1FeI/AAAAAAAAAJE/8l-V7MfSC3cZOqicTb97-fmqUvWgNMhBgCLcBGAs/s1600/junkyard-wars.png
   rounds:
   - First round will be MCQ based on hardware
-  - In the second round there will be Audio-Visual questions based on hardware
+  - In the second round, there will be Audio-Visual questions based on hardware
   - The qualified teams would compete in the battle of assembling the CPUs.
 
 blind-coding:
