--- a/src/content/_data/events.yaml
+++ b/src/content/_data/events.yaml
@@ -233,7 +233,7 @@ technospeak:
         <li>Other details to be submitted along with the article: <br>
         Contact details of the participants (maximum Two):
         Name, Email Id, College, Contact Number<br> <em>(if you've registered through our portal, just send your ticket 'ID')</em></li>
-         <li>Last date of submission is April 2nd, 2018.</li>
+         <li>Last date of submission is April 5th, 2018.</li>
       </ol>
     - 'Note: this workshop is open for students of Dept. of Computer Science as well.'
     - 'Contact for details: Ajay Jajoo'
